--- a/app/src/main/res/layout/activity_main_recyclerview_item.xml
+++ b/app/src/main/res/layout/activity_main_recyclerview_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,9 +11,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
@@ -28,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
-            />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/memoTitle"
@@ -41,7 +38,8 @@
             android:maxLines="1"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:text="title" />
+            tools:text="title"
+            tools:ignore="RtlHardcoded" />
 
         <TextView
             android:id="@+id/memoContent"
@@ -54,7 +52,7 @@
             android:ems="10"
             android:maxLines="1"
             android:ellipsize="end"
-            />
+            tools:ignore="RtlHardcoded" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
